Example workers, working with webpack in node and browser

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <script src="./build/main.js"></script>
+    <script src="./example/build/main.js"></script>
   </body>
 </html>
