move the copied jsaddle js code to jsaddle_core

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <script src="jsaddle_core.js"></script>
     <script src="jsaddle.js"></script>
     <script>
       var jsaddleVals = jsaddleJsInit();
