renamed file for clarity

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <script src="jsaddle_core.js"></script>
-    <script src="jsaddle.js"></script>
+    <script src="jsaddle_webworker_interface.js"></script>
     <script>
       var jsaddleVals = jsaddleJsInit();
       const worker = new Worker("worker_runner.js");
