--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,10 @@
 
   <body>
     <script src="jsaddle_core.js"></script>
-    <script src="jsaddle_webworker_interface.js"></script>
+    <script src="jsaddle_mainthread_interface.js"></script>
     <script>
-      var jsaddleVals = jsaddleJsInit();
-      const worker = new Worker("worker_runner.js");
-      worker.postMessage({ url: "jsaddle-wasm-test.wasm"
-                         , jsaddleVals: jsaddleVals }
-                       , [jsaddleVals.jsaddleListener]);
+      var wasmFile = "jsaddle-wasm-test.wasm";
     </script>
+    <script src="mainthread_runner.js"></script>
   </body>
 </html>
