Make the variable name a bit bold and self explanatory

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <script src="jsaddle_core.js"></script>
     <script src="jsaddle_mainthread_interface.js"></script>
     <script>
-      var wasmFile = "jsaddle-wasm-test.wasm";
+      var WASM_URL_FOR_MAINTHREAD_RUNNER_JS = "jsaddle-wasm-test.wasm";
     </script>
     <script src="mainthread_runner.js"></script>
   </body>
